--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+
+
+/* === Default Boilerplate CSS
+
 .App {
   text-align: center;
 }
@@ -35,4 +39,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
