--- a/src/styles/partials/variables.scss
+++ b/src/styles/partials/variables.scss
@@ -1,10 +1,10 @@
 // colors
-$bandflix-black: #323232;
-$bandflix-darkblack: #000000;
-$bandflix-blue: #0095FF;
-$bandflix-darkblue: #0065AD;
-$bandflix-silver: #AFAFAF;
-$bandflix-mercury: #E1E1E1;
+$brainflix-black: #323232;
+$brainflix-darkblack: #000000;
+$brainflix-blue: #0095FF;
+$brainflix-darkblue: #0065AD;
+$brainflix-silver: #AFAFAF;
+$brainflix-mercury: #E1E1E1;
 $bandflix-alabaster: #FAFAFA;
 
 // media query breakpoint
