add video section

--- a/src/components/FeaturedVideo/FeaturedVideo.scss
+++ b/src/components/FeaturedVideo/FeaturedVideo.scss
@@ -4,15 +4,15 @@
 @use "../../styles/partials/mixins" as *;
 @use "../../styles/partials/typography" as *;
 
+
+
 .video-player__container{
     background-color: $brainflix-darkblack;
-    opacity: 50%;
-    height: 450px;
-    max-height: 50%;
+    height: 500px;
+    max-height: 20%;
     position: relative;
     width: 100%;
-    padding-top: 56.25%;
-    // overflow: hidden;
+    overflow: hidden;
 }
 
 .video-player {
@@ -21,6 +21,6 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
-    padding-top: 56.25%;
+    height: 50%;
+    padding-top: 56.25%;     
 }
