--- a/src/components/CommentData/CommentData.scss
+++ b/src/components/CommentData/CommentData.scss
@@ -27,6 +27,7 @@
         max-width: 800px;
         margin-left: 1rem;
         margin: 0 auto;
+
     }
 }
 .comments-title{
@@ -143,15 +144,14 @@
     border-bottom: 2px solid $brainflix-mercury;
     padding: 0.625rem;
     max-width: 600px;
-    margin: 0 auto;
-    width: 80%;
+    margin: 0rem 2rem;
+   
     @include tablet{
-        padding: 0rem 0rem;
-        max-width: 600px;
-        margin: 0 auto;
+        margin: 0rem 2rem;
+        max-width: 100%;
     }
     @include desktop{
-        padding: 0rem 0rem;
+        padding-right: 2rem;
         max-width: 800px;
         margin: 0 auto;
     }
@@ -159,7 +159,7 @@
 .comments-list__icon{
     flex-shrink: 0;
     border-radius: 50%;
-    margin-right: 10px;
+    margin-right: 2rem;
     margin-left: 0rem;
     margin-top: 1rem;
     width: 50px;
@@ -172,8 +172,6 @@
 .comments-list__group{
     display: flex;
     flex-direction: column;
-    // justify-content: flex-start;
-    // width: 100%;
     flex-grow: 1;
 }
 .comments-list__group2{
