--- a/src/components/FeaturedVideo/FeaturedVideo.scss
+++ b/src/components/FeaturedVideo/FeaturedVideo.scss
@@ -8,19 +8,15 @@
 
 .video-player__container{
     background-color: $brainflix-darkblack;
-    height: 500px;
-    max-height: 20%;
-    position: relative;
-    width: 100%;
+    display: flex;
+    justify-content: center;
+    width: 100vw;
+    height: 70vh;
     overflow: hidden;
 }
 
 .video-player {
-    position: absolute;
     object-fit: cover;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 50%;
-    padding-top: 56.25%;     
+    height: 100%;
+    width: auto;  
 }
